backend/explain_test2.txt
python :   File 
"<string>", line 8
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (  File "<s   
 tring>", line 8:S    
tring) [], Remote    
Exception
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
    prompt = 'You are 
a patient reading 
tutor. Rewrite this 
sentence in very 
simple words a 
10-year-old can 
understand. Reply 
with ONLY the 
simplified sentence, 
nothing 
else.\n\nOriginal: " 
Artificial 
intelligence is a 
branch of computer 
science that focuses 
on creating 
intelligent 
machines.\'
             ^
SyntaxError: 
unterminated string 
literal (detected at 
line 8)
